FEATWEBML-573 feat: rework conversations for cyrus-ectomie